--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,13 +20,12 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - run: cd ./currency_converter
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        cache: 'npm
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
